apps/certmanager/k8s.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: certmanager
  labels:
    goldilocks.fairwinds.com/enabled: "true"
