apps/certmanager/k8s.np.certmanager-default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: certmanager-default-deny
  namespace: certmanager
spec:
  endpointSelector: {}  # Empty selector = matches ALL pods in this namespace
  ingress: []
  egress: []
